PROTON-2673: epoll raw connections - allow delivery of wake events prior to successful connect.